--- a/Form2MongoDB/views/data.ejs
+++ b/Form2MongoDB/views/data.ejs
@@ -3,32 +3,41 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="form.css">
+    <link rel="stylesheet" href="/form.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
     <title>Document</title>
 </head>
 <body>
+    <!-- Luodaan taulukko vastausta varten -->
     <table class="table">
         <tr>
             <th>Rekisteröintinumero</th>
             <th>Nimi</th>
             <th>Sähköposti</th>
             <th>Linja</th>
+            <th>Poisto</th>
+            <th>Päivitys</th>
         </tr>
+        <!-- Tarkistetaan, löytyykö tietoja-->
         <% if(users.length > 0) {%>
+            <!-- Käydään läpi jokainen käyttäjä, joka tietokannasta löytyy-->
             <% users.forEach(user => { %>
         <tr>
-
-                    <td><%= user.reknro %></td>
+                    <!-- Tulostetaan tiedot sarakkeisiin-->
+                    <% const id = user._id %>
+                    <td><a href="/data/<%= id %>"><%= user.reknro %></a></td>
                     <td><%= user.nimi %></td>
                     <td><%= user.email %></td>
                     <td><%= user.linja %></td>
+                    <td><a href="/remove/<%=id %>"><button class="poista">X</a></button></td>
+                    
                 <% }) %>
-            <% } else {%>
-                <p>Ei näytettävää tietoa</p>
-            <% } %>
-        </tr>
+            <!-- Mikäli tietoja ei löydy, tulostetaan teksti-->    
 
+        </tr>
+        <% } else {%>
+            <p>Ei näytettävää tietoa</p>
+        <% } %>
     </table>
 </body>
 </html>
